// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TagIcon correctly 1`] = `
<div
  className="icon"
  style={
    Object {
      "background": "#FFF",
    }
  }
>
  <svg
    aria-label="tag"
  />
</div>
`;

exports[`renders TagIcon with shadow correctly 1`] = `
<div
  className="shadow"
>
  <div
    className="icon"
    style={
      Object {
        "background": "#FFF",
      }
    }
  >
    <svg
      aria-label="tag"
    />
  </div>
</div>
`;
